--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "ezpelurbackend",
-  "version": "1.0.0",
-  "description": "Backend server para la app del grupo Ezpelur",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Xabier Remirez",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.6.9"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/mongoose": "^5.5.12"
-  }
+    "name": "ezpelurbackend",
+    "version": "1.0.0",
+    "description": "Backend server para la app del grupo Ezpelur",
+    "main": "index.js",
+    "scripts": {
+        "start": "node dist/",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Xabier Remirez",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "mongoose": "^5.6.9"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.0",
+        "@types/mongoose": "^5.5.12"
+    }
 }
