--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "mongoose": "^5.6.9"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.5",
         "@types/express": "^4.17.0",
         "@types/mongoose": "^5.5.12"
     }
