--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.6-alpha.5",
         "mongoose": "^5.6.9"
     },
     "devDependencies": {
+        "@types/express-fileupload": "^1.1.0",
         "@types/cors": "^2.8.5",
         "@types/express": "^4.17.0",
         "@types/mongoose": "^5.5.12"
