--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.6-alpha.5",
-        "mongoose": "^5.6.9"
+        "mongoose": "^5.6.9",
+        "onesignal-node": "^2.1.1"
     },
     "devDependencies": {
         "@types/express-fileupload": "^1.1.0",
